# litesvm-client

./: Cargo.toml  README.md
crates/litesvm-client/: Cargo.toml
crates/litesvm-client/src/: errors.rs  lib.rs  rpc_loader.rs  test.rs  traits.rs
crates/litesvm-client/tests/: accounts_loader.rs  advance_time.rs  next_slot.rs  svm_client_as_mut_as_ref.rs
