[package]
name = "litesvm_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies.litesvm]
version = "0.6.1"

[dependencies.solana-sdk]
version = "2.1.16"

[dependencies.thiserror]
version = "1"

[dev-dependencies.tokio]
version = "1"

[dev-dependencies.solana-client]
version = "2.1.16"