[package]
name = "litesvm_client"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["rpc-loader"]
rpc-loader = ["solana-client", "solana-account-decoder-client-types"]

[dependencies.litesvm]
version = "0.6.1"

[dependencies.solana-sdk]
version = "2.1.16"

[dependencies.thiserror]
version = "1"

[dependencies.solana-client]
version = "2.1.16"
optional = true

[dependencies.solana-account-decoder-client-types]
version = "2.1.16"
optional = true

[dependencies.anyhow]
version = "1"

[dev-dependencies.tokio]
version = "1"
