[package]
name = "litesvm_client"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "litesvm utility client"

[features]
default = ["rpc-loader"]
rpc-loader = ["solana-client", "solana-account-decoder-client-types"]

[dependencies.litesvm]
version = "0.8.2"

[dependencies.solana-sdk]
version = "3.0"

[dependencies.thiserror]
version = "1"

[dependencies.solana-client]
version = "3.0"
optional = true

[dependencies.solana-account-decoder-client-types]
version = "3.0"
optional = true

[dependencies.anyhow]
version = "1"

[dev-dependencies.tokio]
version = "1"
